--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'com.gradleup.shadow' version '9.3.1'
 }
 
 group = 'com.ninja.tags'
@@ -16,13 +16,10 @@ java {
 
 repositories {
     mavenCentral()
-    flatDir {
-        dirs 'libs'
-    }
 }
 
 dependencies {
-    compileOnly name: 'HytaleServer'
+    compileOnly(files("libs/HytaleServer.jar"))
     compileOnly 'net.luckperms:api:5.4'
 
     implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
@@ -31,17 +28,44 @@ dependencies {
 }
 
 shadowJar {
+    archiveBaseName.set("ninjatags")
     archiveClassifier.set('')
-    relocate 'org.sqlite', 'com.ninja.tags.shaded.org.sqlite'
     relocate 'com.google.gson', 'com.ninja.tags.shaded.gson'
     relocate 'org.yaml.snakeyaml', 'com.ninja.tags.shaded.snakeyaml'
+    mergeServiceFiles()
 }
 
 jar {
-    enabled = false
+    archiveBaseName.set("ninjatags")
+    archiveClassifier.set('plain')
 }
 
-build {
-    dependsOn shadowJar
+tasks.register("verifyHytaleServerJar") {
+    doLast {
+        def jar = file("libs/HytaleServer.jar")
+        if (!jar.exists()) {
+            throw new GradleException("Missing libs/HytaleServer.jar. Place the HytaleServer.jar in the libs/ folder before building.")
+        }
+    }
 }
 
+tasks.named("compileJava") {
+    dependsOn("verifyHytaleServerJar")
+}
+
+tasks.register("copyPluginJar", Copy) {
+    dependsOn("shadowJar")
+    from(layout.buildDirectory.dir("libs")) {
+        include("ninjatags-${version}.jar")
+    }
+    into(layout.projectDirectory.dir("dist"))
+}
+
+tasks.named("assemble") {
+    dependsOn("shadowJar")
+}
+
+tasks.named("build") {
+    dependsOn("shadowJar")
+    dependsOn("copyPluginJar")
+}
