Fix plugin identifier format in manifest and silence UUID removal warnings

--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -1,6 +1,6 @@
 {
-  "Group": "Ninja",
-  "Name": "NinjaTags",
+  "Group": "ninja",
+  "Name": "ninjatags",
   "Version": "1.0.0",
   "Description": "Tag management plugin with LuckPerms suffix integration",
   "Authors": [{"Name": "Ninja"}],
@@ -8,7 +8,7 @@
   "ServerVersion": "*",
   "Dependencies": {},
   "OptionalDependencies": {
-    "LuckPerms": "*"
+    "luckperms:luckperms": "*"
   },
   "DisabledByDefault": false,
   "Main": "com.ninja.tags.NinjaTagsPlugin",
