Replace chat tags menu with interactive custom UI page

--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -3,7 +3,11 @@
   "Name": "ninjatags",
   "Version": "1.0.0",
   "Description": "Tag management plugin with LuckPerms suffix integration",
-  "Authors": [{"Name": "Ninja"}],
+  "Authors": [
+    {
+      "Name": "Ninja"
+    }
+  ],
   "Website": "https://example.com",
   "ServerVersion": "*",
   "Dependencies": {},
@@ -12,5 +16,5 @@
   },
   "DisabledByDefault": false,
   "Main": "com.ninja.tags.NinjaTagsPlugin",
-  "IncludesAssetPack": false
+  "IncludesAssetPack": true
 }
